feat(sort): profile asc/desc
